support java9 / upgrade aws sdk